--- a/css/class1.css
+++ b/css/class1.css
@@ -53,3 +53,9 @@ p{
     /* line-height: 5px; */
     /* letter-spacing: 10px; */
 }
+
+.momo{
+    /* background-color: aqua; */
+    width: 600px;
+    height: 200px;
+}
